*SVN*

* For new apps, generate a random secret for the cookie-based session store.  [Jeremy Kemper]

* Stop swallowing errors during rake test [Koz]

* Update Rails Initializer to use ActionController::Base#view_paths [Rick]

* Fix gem deprecation warnings, which also means depending on RubyGems 0.9.0+ [Chad Fowler]

* Plugins may be symlinked in vendor/plugins.  #4245 [brandon, progrium@gmail.com]

* Resource generator depends on the model generator rather than duplicating it.  #7269 [bscofield]

* Add/Update usage documentation for script/destroy, resource generator and scaffold_resource generator.  Closes #7092, #7271, #7267.  [bscofield]

* Update to script.aculo.us 1.7.0.  [Thomas Fuchs]

* Update to Prototype 1.5.0. [Sam Stephenson]

* Generator: use destination path for diff tempfiles.  #7015 [alfeld]

* Fixed that webrick would strip leading newlines and hang connection #4156 [psross]

* Ensure plugins are in the Dependencies.load_once_paths collection by default.  [Rick]
  If you really want your plugins to reload, add this to the very top of init.rb:
  
    Dependencies.load_once_paths.delete(lib_path)

* Allow config.to_prepare to work, make the dispatcher safe to 're require'. [Koz, Nicholas Seckar]

* Fix scaffold_resource generator so it respects the --pretend argument when creating the routes file.  Closes #6852 [fearoffish]

* Fix Webrick Daemon dispatching bug regarding a bad current working directory.  Closes #4899 [Rick Olson]

* Make config.plugins affect the load path and the dependencies system.  Allows you to control plugin loading order, and keep disabled plugins off the load path. [James Adam]

* Don't generate a components directory in new Rails apps.  [Jeremy Kemper]

* Fixed script/process/spawner to work properly with Mongrel including in -r (daemonize mode) [DHH]
